fixed game screen (scrollbar)

--- a/public/css/game.css
+++ b/public/css/game.css
@@ -10,6 +10,7 @@ QUIIK CALORS
 
 body{
   background-color: white;
+  overflow: hidden;
 }
 
 .wrapper{
